StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: mqtt
  labels:
    name: rabbitmqtt
spec:
  serviceName: rabbitmq
  selector:
    matchLabels:
      app: rabbitmqtt
  template:
    metadata:
      namespace: mqtt
      labels:
        app: rabbitmqtt
        name: rabbitmqtt
    spec:
      serviceAccountName: rabbitmq
      securityContext:
        runAsUser: 10000
        fsGroup: 20000
        runAsGroup: 30000
      containers:
      - name: rabbitmq
        image: mkellock/polrrabbitmq:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 4369
          name: discovery
        - containerPort: 5672
          name: amqp
        - containerPort: 1883
          name: mqtt
        - containerPort: 8883
          name: mqttssl
        - containerPort: 15672
          name: admin
        - containerPort: 15692
          name: prometheus
        readinessProbe:
          exec:
            command:
              - rabbitmq-diagnostics
              - ping
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 20
          successThreshold: 3
        livenessProbe:
          exec:
            command:
              - rabbitmq-diagnostics
              - status
          initialDelaySeconds: 600
          periodSeconds: 30
          failureThreshold: 3
        # resources:
        #   requests:
        #     memory: "2Gi"
        #     cpu: "250m"
        #   limits:
        #     memory: "2.5Gi"
        #     cpu: "325m"
        volumeMounts:
        - name: data
          mountPath: /var/lib/rabbitmq/mnesia
          readOnly: false
      volumes:
      - name: config-file
        emptyDir: {}
      - name: plugins-file
        emptyDir: {}
      - name: config
        configMap:
          name: rabbitmq-config
          defaultMode: 0755
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 30Gi
