Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    name: rabbitmqtt
  namespace: rabbits
spec:
  ports:
  - port: 4369
    targetPort: 4369
    name: discovery
  - port: 5672
    targetPort: 5672
    name: amqp
  - port: 1883
    targetPort: 1883
    name: mqtt
  - port: 8883
    targetPort: 8883
    name: mqttssl
  - port: 80
    targetPort: 15672
    name: admin
  selector:
    app: rabbitmqtt
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
