rabbitmqtt.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbits
  labels:
    name: rabbitmqtt
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  labels:
    name: rabbitmqtt
  namespace: rabbits
spec:
  serviceName: rabbitmq
  selector:
    matchLabels:
      app: rabbitmqtt
  template:
    metadata:
      labels:
        app: rabbitmqtt
        name: rabbitmqtt
      namespace: rabbits
    spec:
      serviceAccountName: rabbitmq
      containers:
      - name: rabbitmq
        image: rabbitmq:3.8-management
        ports:
        - containerPort: 4369
          name: discovery
        - containerPort: 5672
          name: amqp
        - containerPort: 1883
          name: mqtt
        - containerPort: 8883
          name: mqttssl
        - containerPort: 15672
          name: admin
        readinessProbe:
          tcpSocket:
            port: 1883
          initialDelaySeconds: 30
          periodSeconds: 30
        livenessProbe:
          tcpSocket:
            port: 1883
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          requests:
            memory: "2Gi"
            cpu: "250m"
          limits:
            memory: "2.5Gi"
            cpu: "325m"
        volumeMounts:
        - name: data
          mountPath: /var/lib/rabbitmq
          readOnly: false
        - name: config-file
          mountPath: /config/
        - name: plugins-file
          mountPath: /etc/rabbitmq/
      volumes:
      - name: config-file
        emptyDir: {}
      - name: plugins-file
        emptyDir: {}
      - name: config
        configMap:
          name: rabbitmq-config
          defaultMode: 0755
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 30Gi
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    name: rabbitmqtt
  namespace: rabbits
spec:
  ports:
  - port: 4369
    targetPort: 4369
    name: discovery
  - port: 5672
    targetPort: 5672
    name: amqp
  - port: 1883
    targetPort: 1883
    name: mqtt
  - port: 8883
    targetPort: 8883
    name: mqttssl
  - port: 80
    targetPort: 15672
    name: admin
  selector:
    app: rabbitmqtt
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
